# src/main/java/com/itplace/userapi/user/dto/request/WithdrawRequest.java
@@ -1,0 +1,8 @@
+package com.itplace.userapi.user.dto.request;
+
+import lombok.Data;
+
+@Data
+public class WithdrawRequest {
+    private String password;
+}
